Fix button link align text

--- a/src/components/buttons/LinkButton.module.css
+++ b/src/components/buttons/LinkButton.module.css
@@ -1,5 +1,6 @@
 .button {
 	display: flex;
+	justify-content: center;
 	align-items: center;
 	column-gap: 0.5rem;
 	height: 2.5rem;
